syntax = "proto3";

package proto.client;

message ProtoClientRequest {
    // This structure is temporary. It MUST change.
    bytes tx = 1;
    bytes sig = 2;
}

message ProtoClientReply {
    bytes req_digest = 1;
    uint64 block_n = 2;
    uint64 tx_n = 3;
}